--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.27.3",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
