--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Documentation files (local only - do not push to main)
 DOCTOR_SCREEN_FLOW_VISUAL.md
