--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^2.6.6",
     "@ant-design/icons": "^6.0.2",
     "@js-temporal/polyfill": "^0.5.1",
     "@schedule-x/calendar": "^3.3.0",
@@ -20,11 +21,7 @@
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-<<<<<<< Updated upstream
-
-=======
     "react-icons": "^5.5.0",
->>>>>>> Stashed changes
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
     "socket.io": "^4.8.1",
